# FMS

./: README.md  pyproject.toml
FMS/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  models.py
core/management/commands/: wait_for_db.py
core/migrations/: 0001_initial.py  0002_file.py  0003_alter_user_id.py  0004_remove_file_description_remove_file_name_and_more.py  0005_alter_file_created_at_alter_filetransaction_id_and_more.py  0006_alter_file_created_at_alter_filetransaction_id_and_more.py  0007_alter_file_created_at_and_more.py  0008_file_timestamp_file_transaction_type_and_more.py  0009_remove_file_transaction_type_alter_file_created_at_and_more.py  0010_alter_file_created_at_alter_user_id.py  0011_alter_file_created_at.py
files/: serializers.py  urls.py  views.py
users/: serializers.py  urls.py  views.py
