[tool.poetry]
name = "fms"
version = "0.1.0"
description = ""
authors = ["nidhi-2619 <91557785+nidhi-2619@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
python-dotenv = "^1.0.0"
djangorestframework = "^3.14.0"
drf-spectacular = "^0.26.5"
mysqlclient = "^2.2.0"
django-cors-headers = "^4.3.1"
python-magic = "^0.4.27"
libmagic = "^1.0"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
